--- a/portal/feedback.html
+++ b/portal/feedback.html
@@ -389,9 +389,10 @@
                 <li><a href="index.html">🏠 Início</a></li>
                 <li><a href="detector.html">🔍 Detector</a></li>
                 <li><a href="feedback.html" class="active">🏷️ Feedback</a></li>
-                <li><a href="config.html">⚙️ Configurações</a></li>
                 <li><a href="timeline.html">📊 Timeline</a></li>
+                <li><a href="descriptions.html">🤖 ML Descrições</a></li>
                 <li><a href="docs.html">📚 Documentação</a></li>
+                <li><a href="config.html">⚙️ Configurações</a></li>
             </ul>
         </nav>
         <div class="content">
