--- a/portal/detector.html
+++ b/portal/detector.html
@@ -228,6 +228,7 @@
                 <li><a href="detector.html" class="active">🔍 Detector</a></li>
                 <li><a href="feedback.html">🏷️ Feedback</a></li>
                 <li><a href="timeline.html">📊 Timeline</a></li>
+                <li><a href="descriptions.html">ML Descrições</a></li>
                 <li><a href="docs.html">📚 Documentação</a></li>
                 <li><a href="config.html">⚙️ Configurações</a></li>
             </ul>
