--- a/portal/index.html
+++ b/portal/index.html
@@ -114,8 +114,10 @@
         <nav class="nav">
             <ul>
                 <li><a href="index.html" class="active">🏠 Início</a></li>
-                <li><a href="detector.html">📊 Detector</a></li>
+                <li><a href="detector.html">🔍 Detector</a></li>
                 <li><a href="feedback.html">🏷️ Feedback</a></li>
+                <li><a href="timeline.html">📊 Timeline</a></li>
+                <li><a href="descriptions.html">🤖 ML Descrições</a></li>
                 <li><a href="docs.html">📚 Documentação</a></li>
                 <li><a href="config.html">⚙️ Configurações</a></li>
             </ul>
