--- a/portal/timeline.html
+++ b/portal/timeline.html
@@ -243,11 +243,13 @@
         
         <div class="nav">
             <ul>
+                <li><a href="index.html">🏠 Início</a></li>
                 <li><a href="detector.html">🔍 Detector</a></li>
                 <li><a href="feedback.html">🏷️ Feedback</a></li>
-                <li><a href="config.html">⚙️ Configurações</a></li>
                 <li><a href="timeline.html" class="active">📊 Timeline</a></li>
+                <li><a href="descriptions.html">🤖 ML Descrições</a></li>
                 <li><a href="docs.html">📚 Documentação</a></li>
+                <li><a href="config.html">⚙️ Configurações</a></li>
             </ul>
         </div>
         
